<resources>
    <string name="app_name">RaiderGrader</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_enrollment">Enroll in a Class</string>
    <string name="title_activity_registration">Register</string>
    <string name="title_activity_activity_selector">Choose an Activity</string>
    <string name="title_activity_student_class_list">My Classes</string>
    <string name="title_activity_enrollment_confirmation">Confirm Enrollment</string>
    <string name="title_activity_student_class_item">My Class Item</string>
    <string name="title_activity_student_work_item_list">Work Item</string>
    <string name="title_activity_student_work_item_list_detail">Work Item Details</string>
    <string name="title_activity_student_announcement_list">Announcement</string>
    <string name="title_activity_student_announcement_detail">Announcement Detail</string>
    <string name="title_activity_teacher_class_home">My Homepage</string>
    <string name="title_activity_teacher_class_item">My Class Item</string>
    <string name="title_activity_teacher_create_class_item">Create Class Item</string>
    <string name="title_activity_teacher_create_class">Create A Class</string>
    <string name="title_activity_teacher_update_class">Update Class</string>
    <string name="title_activity_teacher_student_item">Create Student Work Item</string>
    <string name="title_activity_teacher_class_waitlist">Student Class Waitlist</string>
    <string name="title_activity_teacher_class_accepted_student">Accepted Student</string>
    <string name="title_activity_teacher_work_item_list">Work Item</string>
    <string name="title_activity_teacher_create_work_item">Create Work Item</string>
    <string name="title_activity_teacher_work_item_detail">Detail</string>
    <string name="title_activity_teacher_update_work_item">Update Work Item</string>
    <string name="title_activity_teacher_grade_work_item">Grade Work Item</string>
    <string name="title_activity_teacher_announcement_list">Announcement</string>
    <string name="title_activity_teacher_create_announcement">Create Announcement</string>
    <string name="title_activity_teacher_announcement_detail">Announcement Detail</string>
    <string name="title_activity_teacher_update_announcement">Update Announcement</string>
    <string name="title_activity_teacher_student_detail">Student Detail</string>

    <!-- Selector Page -->
    <string name="selector_login">Login</string>s
    <string name="selector_enroll">Enrollment</string>
    <string name="selector_register">Registration</string>
    <string name="selector_std_classlist">Student class list</string>
    <string name="selector_std_classdetail">Student class detail</string>
    <string name="selector_tch_classlist">Teacher class list</string>
    <string name="selector_std_dropclass">Student drop class</string>
    <string name="selector_tch_deleteclass">Teacher delete class</string>
    <string name="selector_tch_manageclass">Teacher manage class</string>
    <string name="selector_std_workitemdetail">Student workitem details</string>


    <!-- Login Page-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_classid">Class ID</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_login">Log In</string>

    <!-- Registration Page -->
    <string name="title_activity_register">Register</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_confirmPwd">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="text_register">New to Raider Grader? Register Here</string>

    <string name="text_class">Class: </string>
    <string name="text_courseNumber">Course Number: </string>
    <string name="text_teacher">Teacher: </string>
    <string name="text_startDate">Start Date: </string>
    <string name="text_endDate">End Date: </string>
    <string name="btn_submit">Submit</string>
    <string name="text_confirm_enroll">Are you sure you want to join this class?</string>

    <!-- Validation -->
    <string name="invalid_password">Must be at least 6 characters long\nMust contain a digit\nMust contain upper and lowercase letters\nMust contain a punctuation</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="invalid_nonEmptyText">Value must not be empty</string>
    <string name="invalid_integer">Enter a valid integer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_teacher_create_work_item">
        activity_teacher_create_workItem
    </string>

    <string name="text_title">Title</string>
    <string name="text_description">Description</string>
    <string name="text_score">Out of </string>
    <string name="btn_time">Set time</string>
    <string name="btn_date">Set date</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>

    <string name="btn_create"> Create</string>

    <string name="title_activity_activity_teacher_work_item_list">activity_teacher_workItem_list
    </string>


    <!-- Menu -->
    <string name="menu_logout">Log out</string>
</resources>
